# AsBar

./: .gitignore  LICENSE  README.md  assistant.html  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: build.yml
src/: assistant.css  assistant.ts  fonts.ts  i18n.ts  island.css  island.ts  settings.css  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  autostart.rs  browser.rs  config.rs  lib.rs  main.rs  media.rs  visualizer.rs
