[package]
name = "asbar"
version = "0.1.0"
description = "AsBar — Dynamic Island for Windows"
authors = ["AsBar"]
edition = "2021"

[lib]
name = "asbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "UI_ViewManagement",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
